# ProjectPathfinder

lien-api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lien-api/app/: config.py  database.py  enums.py  main.py  models.py  schemas.py  security.py
lien-api/app/api/routes/: health.py  liens.py
lien-api/app/ingestion/: base.py  normalize.py  pipeline.py  registry.py
lien-api/app/ingestion/connectors/: maricopa.py  miami_dade.py
lien-api/app/ingestion/fixtures/: maricopa_sample.json  miami_dade_sample.json
lien-api/scripts/: seed.py
lien-api/tests/: test_api.py  test_normalize.py
