[project]
name = "lien-api"
version = "0.1.0"
description = "Modern API for mechanic's lien records, normalized across jurisdictions."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",       # local/dev driver
    "asyncpg>=0.29",         # production Postgres driver
    "python-dateutil>=2.9",
    "httpx>=0.27",           # connector HTTP + test client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
